--- a/css/app.css
+++ b/css/app.css
@@ -1911,10 +1911,10 @@ fieldset legend {
 }
 
 .card-style {
-  -webkit-box-shadow: 0 4px 24px 0 #0000001a;
-          box-shadow: 0 4px 24px 0 #0000001a;
   border: 0;
   border-radius: 12px;
+  border-radius: 12px;
+  background: #F6FAFC;
 }
 
 .upperInfo {
@@ -2333,7 +2333,7 @@ fieldset legend {
 }
 
 .bottom-part {
-  background: #F1F8FD;
+  background: #dfe6e9;
   padding: 13px;
   border: 1px solid #dfdfdf5e;
   border-radius: 4px;
