--- a/css/app.css
+++ b/css/app.css
@@ -10,7 +10,7 @@ ul {
 }
 
 .txt-theme {
-  color: #243a34;
+  color: #6e6868;
 }
 
 .ms-61 {
@@ -2333,12 +2333,11 @@ fieldset legend {
 }
 
 .bottom-part {
-  background: #dfe6e9;
+  background: #ffffff;
   padding: 13px;
-  border: 1px solid #dfdfdf5e;
+  border: 1px solid #d2d2d233;
   border-radius: 4px;
   font-size: 14px;
-  color: #363738;
 }
 
 .bottom-part .upper {
@@ -2361,7 +2360,7 @@ fieldset legend {
 
 .bottom-part .upper .item .infos {
   font-size: 14px;
-  color: #2e2e2e;
+  color: #6e6868;
 }
 
 .bottom-part .dipper .iconify {
