--- a/css/app.scss
+++ b/css/app.scss
@@ -17,7 +17,7 @@ $white: #fff;
 
 //color 
 
-$txt: #243a34;
+$txt: #6e6868;
 
 .txt-theme {
   color: $txt;
@@ -2110,12 +2110,11 @@ fieldset {
 }
 
 .bottom-part {
-  background: $primary;
+  background: #ffffff;
   padding: 13px;
-  border: 1px solid #dfdfdf5e;
+  border: 1px solid #d2d2d233;
   border-radius: 4px;
   font-size: 14px;
-  color: #363738;
 
   .upper {
     display: flex;
@@ -2131,7 +2130,7 @@ fieldset {
 
       .infos {
         font-size: 14px;
-        color: #2e2e2e;
+        color: #6e6868;
       }
     }
   }
