--- a/css/app.css
+++ b/css/app.css
@@ -2532,4 +2532,58 @@ fieldset legend {
   font-size: 12px;
   font-weight: bold;
 }
+
+.bg-default {
+  background: #F7F7F7;
+}
+
+.questionair {
+  background: #F6FAFC;
+}
+
+.questionair .txt {
+  color: #5c5c5c;
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.questions {
+  border-radius: 6px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding: 20px;
+  border: 1px solid #EAEAEB;
+}
+
+.question-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 10px 0;
+  padding: 0;
+}
+
+.question-container .item {
+  margin-right: 12px;
+  margin-bottom: 8px;
+}
+
+.question-container .item label {
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 12px;
+  background: #F4F4F4;
+  color: #6D6B71;
+  border: 2px solid transparent;
+}
+
+.question-container .item .optionCheker {
+  display: none;
+}
+
+.question-container .item .optionCheker:checked + label {
+  border-color: #3A92E3;
+}
 /*# sourceMappingURL=app.css.map */
