--- a/css/app.scss
+++ b/css/app.scss
@@ -7,6 +7,7 @@
 ul {
   padding: 0;
 }
+
 //   variables
 
 $primary: #dfe6e9;
@@ -797,6 +798,7 @@ footer {
               background: $primary;
               border-radius: 5px;
               color: #545454;
+
               .iconify {
                 color: rgb(3, 3, 3) !important;
               }
@@ -810,11 +812,13 @@ footer {
 
             li {
               list-style: none;
+
               a {
                 padding: 12px 40px;
                 color: #333;
                 display: block;
                 text-decoration: none;
+
                 .iconify {
                   color: #2E7BF0;
                   margin-right: 8px;
@@ -828,7 +832,8 @@ footer {
   }
 
   .rightSection {
-    flex: 1; 
+    flex: 1;
+
     .topbar {
       width: 100%;
       padding: 8px 15px;
@@ -847,21 +852,26 @@ footer {
 
     .dashboard-content {
       position: relative;
+
       .rows {
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
         column-gap: 10px;
         padding: 15px;
+
         @media(max-width:768px) {
           padding: 0 5px;
         }
+
         .cols {
           flex: 1;
           column-gap: 15px;
+
           @media(max-width:800px) {
             flex: 100%;
           }
+
           .card {
             box-shadow: 0 0.1rem 0.10rem #0000001a;
             border-radius: 6px;
@@ -878,14 +888,17 @@ footer {
               box-shadow: 0 10px 40px #0003;
               transform: translateY(-5px);
             }
+
             .box {
               display: flex;
               align-items: center;
               justify-content: space-around;
+
               @media(max-width:1024px) {
                 justify-content: center;
                 flex-direction: column;
               }
+
               .iconify {
                 font-size: 3.7rem;
                 color: #ffffff;
@@ -1717,11 +1730,11 @@ fieldset {
   }
 }
 
-.card-style { 
+.card-style {
   border: 0;
-  border-radius: 12px; 
   border-radius: 12px;
-  background:$secondary;
+  border-radius: 12px;
+  background: $secondary;
 }
 
 .upperInfo {
@@ -1947,7 +1960,7 @@ fieldset {
 
   .items {
     @media(max-width:1024px) {
-      margin: 6px 0;
+      margin: 10px 0;
     }
 
     &:nth-child(1) {
@@ -1992,6 +2005,10 @@ fieldset {
     &:nth-child(4) {
       margin-right: 18px;
 
+      @media (max-width:1024px) {
+        min-width: 260px;
+      }
+
       .screening {
         .title {
           font-size: 15px;
@@ -2006,6 +2023,11 @@ fieldset {
     &:nth-child(5) {
       margin-right: 18px;
       word-break: break-all;
+
+      @media(max-width:768px) {
+        display: block;
+        width: 100%;
+      }
 
       .user {
         font-size: 15px;
@@ -2041,7 +2063,9 @@ fieldset {
       align-items: center;
       display: flex;
 
-
+      @media(max-width:768px) {
+         flex-basis: 100%;
+      }
 
       .username {
         font-size: 15px;
@@ -2056,16 +2080,70 @@ fieldset {
       display: flex;
       justify-content: flex-end;
       align-items: center;
-
+      @media(max-width:768px) { 
+        justify-content: flex-start!important;
+     } 
       .options {
         color: #8A97A0;
-        font-size: 2rem;
+        font-size: 1.6rem;
         cursor: pointer;
       }
     }
   }
 }
 
+.candidate-title-bar {
+  display: none;
+
+  @media(min-width:1366px) {
+    display: flex;
+  }
+
+  @extend .candidate-bar;
+  border: 0 !important;
+  margin-bottom: 20px !important;
+  box-shadow: 1px 1px 5px #0000001a !important;
+
+  .items {
+
+    &:nth-child(4) {
+      min-width: 178px;
+    }
+    &:nth-child(3) {
+      width: 84px;
+    }
+
+    &:nth-child(2) {
+      flex-basis:195px;
+    }
+
+    &:nth-child(5) {
+      min-width: 120px;
+
+    }
+
+    &:nth-child(6) {
+      width: 76px;
+      flex: unset;
+
+    }
+
+    
+
+    .column-title {
+      font-size: 14px;
+      color: #424141;
+      font-weight: 600;
+      padding-left: 15px;
+      width: 100%;
+
+      &.stage {
+        padding-left: 11px;
+      }
+    }
+
+  }
+}
 
 .review-status {
   min-width: 16.6rem;
@@ -2183,9 +2261,9 @@ fieldset {
 .candidate-board {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
 
-  @media(max-width:768px){
+  @media(max-width:768px) {
     justify-content: center;
   }
 
@@ -2244,7 +2322,7 @@ fieldset {
 
       .userInfo {
         display: flex;
-    align-items: center;
+        align-items: center;
         border-bottom: 1px solid #F3F2F3;
         padding-bottom: 9px;
 
@@ -2287,6 +2365,7 @@ fieldset {
 
 .questionair {
   background: #F6FAFC;
+
   .txt {
     color: #5c5c5c;
     font-weight: 600;
@@ -2309,16 +2388,17 @@ fieldset {
   padding: 0;
 
   .item {
-   
 
-    
-      margin-right: 12px;
-    
+
+
+    margin-right: 12px;
+
 
     margin-bottom: 8px;
 
     label {
-      border-radius: 4px; cursor: pointer;
+      border-radius: 4px;
+      cursor: pointer;
       padding: 12px;
       background: #F4F4F4;
       color: #6D6B71;
