--- a/css/app.scss
+++ b/css/app.scss
@@ -1959,18 +1959,27 @@ fieldset {
   border-bottom: 1px solid #EBEBEB;
 
   .items {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    .username{
+      padding-left: 10px;
+    }
+
     @media(max-width:1024px) {
       margin: 10px 0;
     }
 
-    &:nth-child(1) {
-      margin-right: 18px;
-    }
+    // &:nth-child(1) {
+    //   margin-right: 18px;
+    // }
 
     &:nth-child(2) {
       word-break: break-all;
       align-items: center;
-      flex-basis: 206px;
+      // flex-basis: 206px;
       display: flex;
 
       .username {
@@ -1983,7 +1992,7 @@ fieldset {
     }
 
     &:nth-child(3) {
-      margin-right: 18px;
+
 
       .review {
         width: 73px;
@@ -2003,7 +2012,7 @@ fieldset {
     }
 
     &:nth-child(4) {
-      margin-right: 18px;
+
 
       @media (max-width:1024px) {
         min-width: 260px;
@@ -2021,7 +2030,7 @@ fieldset {
     }
 
     &:nth-child(5) {
-      margin-right: 18px;
+
       word-break: break-all;
 
       @media(max-width:768px) {
@@ -2044,7 +2053,7 @@ fieldset {
 
     &:nth-child(6) {
       flex: 1;
-      margin-right: 18px;
+
       display: flex;
       align-items: center;
       text-align: left;
@@ -2057,14 +2066,14 @@ fieldset {
     }
 
     &:nth-child(7) {
-      flex-basis: 165px;
+      // flex-basis: 165px;
       word-break: break-all;
-      margin-right: 18px;
+
       align-items: center;
       display: flex;
 
       @media(max-width:768px) {
-         flex-basis: 100%;
+        flex-basis: 100%;
       }
 
       .username {
@@ -2080,9 +2089,11 @@ fieldset {
       display: flex;
       justify-content: flex-end;
       align-items: center;
-      @media(max-width:768px) { 
-        justify-content: flex-start!important;
-     } 
+
+      @media(max-width:768px) {
+        justify-content: flex-start !important;
+      }
+
       .options {
         color: #8A97A0;
         font-size: 1.6rem;
@@ -2094,6 +2105,7 @@ fieldset {
 
 .candidate-title-bar {
   display: none;
+  width: 100%;
 
   @media(min-width:1366px) {
     display: flex;
@@ -2109,12 +2121,13 @@ fieldset {
     &:nth-child(4) {
       min-width: 178px;
     }
+
     &:nth-child(3) {
       width: 84px;
     }
 
     &:nth-child(2) {
-      flex-basis:195px;
+      flex-basis: 195px;
     }
 
     &:nth-child(5) {
@@ -2128,7 +2141,7 @@ fieldset {
 
     }
 
-    
+
 
     .column-title {
       font-size: 14px;
@@ -2142,6 +2155,46 @@ fieldset {
       }
     }
 
+  }
+}
+.table-heading{
+  padding: 6px;
+    border-radius: 7px;
+  margin-bottom: 20px !important;
+  box-shadow: 1px 1px 5px #0000001a !important;
+
+  .column-title{
+    font-size: 14px;
+      color: #424141;
+      font-weight: 600;
+  }
+ 
+}
+table.dataTable thead th, table.dataTable thead td{
+  border-bottom: 0!important;
+}
+.candidate{
+  .items{
+    display: flex;
+    align-items: center;
+    .username{
+        font-size: 15px;
+        color: #4e4e4e;
+        font-weight: 600;
+        margin-left: 8px;
+        width: 100%;
+    } 
+    &.designation{
+      display: flex;
+      align-items: start;
+      flex-direction: column;
+      .user{
+        font-size: 15px;
+        color: #4e4e4e;
+        font-weight: 600;  
+      }
+      .role{}
+    }
   }
 }
 
@@ -2235,6 +2288,9 @@ fieldset {
     font-weight: bold;
     font-size: 13px;
     vertical-align: middle;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &.active-lightgreen {
       background: #96C188;
@@ -2414,4 +2470,60 @@ fieldset {
     }
   }
 
+}
+
+.task {
+
+
+
+  .card {
+    box-shadow: -2px 8px 15px #00000026;
+    border-radius: 16px !important;
+  }
+
+  .inner {
+    position: relative;
+    border-bottom: 2px solid #f7f7f7;
+    padding: 11px 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+
+    .task-label {
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      font-size: 16px;
+      text-transform: capitalize;
+      color: #585858;
+      font-weight: 600;
+
+      input[type="radio"] {
+        appearance: none;
+        height: 20px;
+        width: 20px;
+        border-radius: 50%;
+        border: 1px solid lightgray;
+        position: relative;
+
+        &:checked {
+          &::after {
+            content: '';
+            height: 12px;
+            width: 12px;
+            background: #b3b6b7;
+            position: absolute;
+            border-radius: 50%;
+            left: 3px;
+            top: 3px;
+          }
+        }
+      }
+    }
+
+    .sub-txt {
+      margin-left: 30px;
+    }
+  }
 }
